[package]
name = "rust-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
cpal = "0.15.2"
crossbeam = "0.8.2"
eframe = "0.22.0"
egui = "0.22.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
time = { version = "0.3.20", features = ["macros"] }
